--- a/public/mainframe.html
+++ b/public/mainframe.html
@@ -9,7 +9,7 @@
 <link rel="apple-touch-icon" sizes="76x76" href="icons/app_76x76.png">
 <link rel="apple-touch-icon" sizes="120x120" href="icons/app_120x120.png">
 <link rel="apple-touch-icon" sizes="152x152" href="icons/app_152x152.png">
-<link rel="apple-touch-startup-image" href="/images/loading.png">
+
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>Lern die Uhr</title>
 <script src="/scripts/jquery-1.11.2.min.js"></script>
@@ -167,7 +167,6 @@ function initialize() {
 <body onload="initialize()">
   <!-- Start page container -->
 <div id="Loading">
-<img class="dialogImage" src="images/loading.jpg">
 </div> <!-- id="Loading" -->
 <div id="ContinueGame">
 <ul>
@@ -188,8 +187,8 @@ function initialize() {
   <!-- Right content -->
   <div class='layer2'></div>
   <div class="layer3">
-      <img class='character' id='blink' src='images/blink.png'/>
-      <img class='character' id='Eyes' src='images/eyes.png'/>
+  <div class='layer3 blink' id='blink'></div>
+  <div class='layer3 eyes' id='Eyes'></div> 
       <canvas id="mainarea">The &lt;canvas&gt; element is not supported by your browser!</canvas>
 <script type="application/x-javascript">
   window.addEventListener('resize', resizeCanvas, false);
