neue Aufgaben mit intervallen

--- a/mokikz-express/public/mainframe.html
+++ b/mokikz-express/public/mainframe.html
@@ -197,6 +197,11 @@ function initialize() {
     <h1>In welcher Klasse bist du?</h1>
     <ul>
       <li>
+        <div onclick="selectKlasse(1)">
+          <p class="zentriert">1. Klasse</p>
+        </div>
+      </li>
+      <li>
         <div onclick="selectKlasse(2)">
           <p class="zentriert">2. Klasse</p>
         </div>
